# retro-cube

./: .gitignore  README.md
.github/workflows/: ci.yml
3d/: case.FCStd
3d/stl/: body.stl  knob.stl  lid.stl  panel.stl
3d/v1/: case-26.FCStd
lcd_1602_ic/: Cargo.toml  dockerfile  justfile
lcd_1602_ic/src/: main.rs
lcd_1602_iic/: .env-example  .gitignore  dockerfile  justfile
lcd_1602_iic/src/: main.rs
oled_ssd1306_iic/: Cargo.toml  dockerfile  justfile
oled_ssd1306_iic/src/: main.rs
os/: .env-example  .env.example  Cargo.toml  dockerfile  justfile
os/assets/: loading.tga
os/src/: main.rs  message.rs  oled.rs  simulator.rs  weather.rs
os/src/state/: event.rs  mod.rs  view.rs
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  dockerfile
server/src/: main.rs
