[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
# utilities
anyhow = "1.0.100"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.29"

# display
rppal = { version = "0.22", features = ["hal"] }
ssd1306 = "=0.8.4"
ssd1309 = "=0.4.0"
display-interface = "=0.4.1"
display-interface-spi = "=0.4.1"
embedded-graphics = "0.8.1"
