[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
# utilities
anyhow = "1.0.100"
chrono = "0.4.42"
dotenv = "0.15.0"

env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.13", default-features = false , features = ["json", "blocking", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# graphics
embedded-graphics = "0.8.1"
embedded-graphics-simulator = {version = "0.8.0", optional = true }

# OLED display
rppal = { version = "0.22", features = ["hal"], optional =  true }
ssd1309 = { version = "=0.4.0", optional = true }
display-interface-spi = { version = "=0.4.1", optional = true }
ctrlc = "3.5.1"

[features]
default = ["embedded-graphics-simulator"]
oled = ["rppal", "ssd1309", "display-interface-spi"]
